네이버 지도 401 에러 클라이언트 아이디 관련

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Nearby_restaurant_app">
         <activity
+            android:name=".MapActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
